array , random functions

--- a/02_Data Manipulation/Part B - Numpy/Chapter 02 - How to Create Arrays and Functions in Python.ipynb
+++ b/02_Data Manipulation/Part B - Numpy/Chapter 02 - How to Create Arrays and Functions in Python.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0b04a8c6",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "497dd369",
    "metadata": {
     "colab": {
@@ -95,15 +95,30 @@
     "id": "9SZ2FDADXpgV",
     "outputId": "35a44689-cd5e-4c53-82e0-15ebc6940d71"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['', '', '', ''], dtype='<U1')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create an integer array with 10 zeros\n",
-    "np.zeros(10, dtype=int)"
+    "np.zeros(10, dtype=int)\n",
+    "\n",
+    "np.zeros(5, dtype=float)\n",
+    "\n",
+    "np.zeros(4, dtype=str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ceeaf4ca",
    "metadata": {
     "colab": {
@@ -124,15 +139,66 @@
     "id": "hTOZcQ-9Xpit",
     "outputId": "561566c8-9245-4910-899e-31baa0d8b364"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]]],\n",
+       "\n",
+       "\n",
+       "       [[[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]]],\n",
+       "\n",
+       "\n",
+       "       [[[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]],\n",
+       "\n",
+       "        [[1, 1, 1],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 1, 1]]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a 3x5 float-ing point array filled with 1s\n",
-    "np.ones((3,5), dtype=float)"
+    "np.ones((3,5), dtype=float)\n",
+    "\n",
+    "np.ones(4,dtype=int)\n",
+    "\n",
+    "np.ones((3,3,3,3), dtype=int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fcf83d73",
    "metadata": {
     "colab": {
@@ -153,15 +219,40 @@
     "id": "hF9Z27-oXplK",
     "outputId": "42d83af3-533d-471f-a82e-985bf3e0dae7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2]],\n",
+       "\n",
+       "       [[1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2]],\n",
+       "\n",
+       "       [[1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2],\n",
+       "        [1.2, 1.2, 1.2]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a 3x5 array filled with 3.14\n",
-    "np.full((3,5), 3.14)"
+    "np.full((3,5), 3.14)\n",
+    "\n",
+    "np.full(6,3.3)\n",
+    "\n",
+    "np.full((3,3,3),1.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "981c3818",
    "metadata": {
     "colab": {
@@ -182,16 +273,29 @@
     "id": "xnQwpisIXpnT",
     "outputId": "f6a56487-ae3b-4dca-ce21-570ac96029a2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  5,  8, 11, 14, 17, 20, 23])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create an array filled with a linear sequence\n",
     "# starting at 0, ending at 20, stepping by 2\n",
-    "np.arange(0, 20, 2)"
+    "np.arange(0, 20, 2)\n",
+    "\n",
+    "np.arange(2,25,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "addaced9",
    "metadata": {
     "colab": {
@@ -212,15 +316,28 @@
     "id": "eKeSVZChZnug",
     "outputId": "36f76370-a8ff-4086-d576-bbc16a8abdad"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.  , -0.25,  0.5 ,  1.25,  2.  ])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create an array of five values evenly spaced between 0 and 1\n",
-    "np.linspace(0, 1, 5)"
+    "np.linspace(0, 1, 5)\n",
+    "\n",
+    "np.linspace(-1,2,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5998e743",
    "metadata": {
     "colab": {
@@ -241,15 +358,30 @@
     "id": "YNrI5UTiZxP5",
     "outputId": "e6c981ae-e84b-4d2c-f395-0ea3763ae9ae"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49472744, 0.82385007, 0.1262335 , 0.86207578],\n",
+       "       [0.97641131, 0.53895109, 0.1230095 , 0.98474054],\n",
+       "       [0.23619653, 0.27109738, 0.00545689, 0.16072854]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a 3x3 array of uniformly distributed random values between 0 and 1\n",
-    "np.random.random((3,3))"
+    "np.random.random((3,3))\n",
+    "\n",
+    "np.random.random((3,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3281dd02",
    "metadata": {
     "colab": {
@@ -270,13 +402,27 @@
     "id": "xeG1VgFCZ-Ay",
     "outputId": "7fda2f6c-f4b0-4e4f-f19b-5e6c000c70f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-19.69811546,   3.14838862],\n",
+       "       [ -8.75884407,  26.34389089]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a 3x3 array of normally distributed random values\n",
     "# with mean 0 and standard deviation 1\n",
     "# np.random.normal(mean,std,array size)\n",
     "\n",
-    "np.random.normal(0, 1, (3, 3))"
+    "np.random.normal(0, 1, (3, 3))\n",
+    "\n",
+    "np.random.normal(5,10,(2,2))"
    ]
   },
   {
@@ -302,11 +448,26 @@
     "id": "LWEpGXNNZ-Dv",
     "outputId": "d0b0954a-26b4-41e1-d0c6-b2c5b0eb3e02"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 6, 9],\n",
+       "       [7, 8, 6],\n",
+       "       [8, 8, 5]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a 3x3 array of random integers in the interval [0, 10)\n",
     "# np.random.randint(start value, stop value, array size)\n",
-    "np.random.randint(0, 10, (3,3))"
+    "np.random.randint(0, 10, (3,3))\n",
+    "\n",
+    "np.random.randint(5,10,(3,3))"
    ]
   },
   {
@@ -332,10 +493,26 @@
     "id": "Kxr1cNnmajaR",
     "outputId": "c1c14804-5fcd-4a22-fa4d-78e9d1904fb0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create a 3x3 identity matrix\n",
-    "np.eye(5)"
+    "# create a 5x5 identity matrix\n",
+    "np.eye(5)\n",
+    "\n",
+    "# 3x3 identity matrix\n",
+    "np.eye(3)"
    ]
   },
   {
@@ -361,11 +538,26 @@
     "id": "a-U8npvTajdo",
     "outputId": "686600e5-0aae-472a-ae6e-6b9c24b20e1e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49472744, 0.82385007, 0.1262335 , 0.86207578],\n",
+       "       [0.97641131, 0.53895109, 0.1230095 , 0.98474054],\n",
+       "       [0.23619653, 0.27109738, 0.00545689, 0.16072854]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create an uninitialized array of three integers\n",
+    "# create an uninitialized array of five integers\n",
     "# the values will be whatever happens to already exist at that memory location\n",
-    "np.empty(5)"
+    "np.empty(5)\n",
+    "\n",
+    "np.empty((3,4)) # zufällige Werte"
    ]
   },
   {
@@ -396,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7c1ccf0f",
    "metadata": {
     "colab": {
@@ -417,7 +609,18 @@
     "id": "JNxLLBGUiL2H",
     "outputId": "ca0306fc-99b5-4f42-bd5e-588abf967cfb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int16)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.zeros(10, dtype='int16')\n",
     "a"
@@ -425,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "1c09076e",
    "metadata": {
     "colab": {
@@ -446,7 +649,18 @@
     "id": "GvRTE-spiQ07",
     "outputId": "607b2870-b271-43d1-fdc0-38d869bb5ba4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int16')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a.dtype"
    ]
@@ -508,9 +722,30 @@
    "metadata": {
     "id": "9SZ2FDADXpgV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.ones(100, dtype = float) # with 1., float\n",
+    " \n",
+    "np.ones(100, dtype= int) # with 1, int\n",
+    "\n",
+    "np.ones(100) # standard is with float(1.)"
    ]
   },
   {
@@ -534,12 +769,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2f31260e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.zeros((4,3))"
    ]
   },
   {
@@ -563,14 +813,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "99b48e7e",
    "metadata": {
     "id": "hF9Z27-oXplK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.28, 6.28],\n",
+       "       [6.28, 6.28],\n",
+       "       [6.28, 6.28],\n",
+       "       [6.28, 6.28],\n",
+       "       [6.28, 6.28]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.full((5,2), 6.28)"
    ]
   },
   {
@@ -597,9 +863,23 @@
    "execution_count": null,
    "id": "170f1ac7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  3.,  6.,  9., 12., 15., 18., 21., 24., 27., 30.])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.linspace(0,30,11) #float\n",
+    "\n",
+    "np.array(range(0,31,3)) # int"
    ]
   },
   {
@@ -623,12 +903,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "8a2c4dd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  8., 16., 24., 32., 40., 48., 56., 64.])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.linspace(0,64,9)"
    ]
   },
   {
@@ -653,14 +945,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "bac70e1c",
    "metadata": {
     "id": "YNrI5UTiZxP5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.11702787, 0.23544421],\n",
+       "       [0.83773772, 0.28342541],\n",
+       "       [0.70382015, 0.71045624],\n",
+       "       [0.3451239 , 0.59055618],\n",
+       "       [0.96182142, 0.78166995]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "np.random.random((5,2))"
    ]
   },
   {
@@ -684,14 +992,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "bcd798e4",
    "metadata": {
     "id": "LWEpGXNNZ-Dv"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 1, 3, 5, 1, 5, 1, 0, 5])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "np.random.randint(0,6,10)"
    ]
   },
   {
@@ -715,14 +1036,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "980ebed5",
    "metadata": {
     "id": "Kxr1cNnmajaR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "np.eye(4,4)"
    ]
   },
   {
@@ -743,7 +1080,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -757,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
